build base default layout

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,9 +3,16 @@
 
 :root {
     $primary: #FE2C55;
+
+    // Default layout
+    $default-layout-header-height: 60px;
+    $default-layout-width: 1150;
+
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
